# jinjalint

./: .pre-commit-hooks.yaml  .travis.yml  LICENSE  Makefile  pyproject.toml  setup.cfg  setup.py
.github/workflows/: jinjalint.yaml
jinjalint/: util.py
tests/: config_test.py  conftest.py  parse_test.py  util_test.py
